tools/tests/errors/pow_negative_exp_mod.experr
exponent must be non-negative
